@@ -1,3 +1,7 @@
+2007-03-14 Yen-Ju Chen <yjchenx at gmail>
+
+	* Fix ghost state after moving it to AZDockView.
+
 2007-03-12 Yen-Ju Chen <yjchenx at gmail>
 
 	* Make sure the icon is on top of normal window.
